<resources>
    <string name="app_name">Password Bro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Password Bro</string>

    <!-- Layout string -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy">Privacy Statement</string>
    <string name="menu_account">Account</string>
    <string name="generate_title">Generate your password</string>
    <string name="generate_subtitle">Choose Strength: </string>
    <string name="easy_text">Easy</string>
    <string name="mod_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="generate_btn">Generate</string>
    <string name="generate_btn_2">Generate Again</string>
    <string name="hint">Enter a name for reference e.g. facebook</string>
    <string name="save_btn">save</string>
    <string name="home_title">Your Passwords</string>
    <string name="home_subtitle">Tap on any item to view it\'s detail\n\nLong Tap to copy password</string>
    <string name="home_subtitle_2">Add item to view them here\n\nPress Add Button to add items</string>
    <string name="hint_2">Enter password</string>
    <string name="delete_btn">delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="length_header">Length</string>
    <string name="security_header">Security</string>
    <string name="backup">Backup</string>

    <!-- Preference string -->
    <string name="easy_length">Length of easy password</string>
    <string name="mod_length">Length of medium password</string>
    <string name="hard_length">Length of hard password</string>
    <string name="autoFill">Auto fill</string>
    <string name="autoFill_description">Auto Fill saved password while Login in to services</string>
    <string name="fingerprint">Fingerprint Lock</string>
    <string name="backup_string">Backup Data</string>

    <!-- privacy string-->
    <string name="privacy_title">Every Thing you need to know</string>
    <string name="privacy_subtitle">1. I don\'t collect any information from you or any kind of usage data.\n
                                    2. Every thing you do on this app, stays on this app.\n
                                    3. I am totally against AdWare and you\'ll not find a single Ad anywhere in this app.\n
                                    4. Only thing goes outside this app is your backup data and nothing more.\n</string>
    <string name="privacy">privacy_logo</string>

    <!-- share string -->
    <string name="share_title">Share</string>
    <string name="share_logo">share_logo</string>
    <string name="share_subtitle">Loved the app?\nShare with your friends.</string>
    <string name="share_message">I have download this app.\nIt helps me in managing my passwords.\nIt is easy to use and is really secure\nDownload it here: https://tinyurl.com/passwordbro</string>

    <!-- splash string -->
    <string name="app_icon">appIcon</string>
    <string name="splash_title">Unlock Password Bro</string>
    <string name="lock_img">lockImg</string>

    <!-- fingerprint string-->
    <string name="fingerprint_error_1">Fingerprint Scanner not Found</string>
    <string name="fingerprint_error_2">Permission not granted</string>
    <string name="fingerprint_error_3">Add Screen Lock on your Phone in Settings</string>
    <string name="fingerprint_error_4">Add at least 1 Fingerprint</string>
    <string name="fingerprint_success">Touch the fingerprint sensor</string>

    <!-- parse server data-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Mhfgk9lHtO5gHaTBYHXyYEYyJSzeMRVhzWrQX57x</string>
    <string name="back4app_client_key">IgMMs1WLD82i9BeEcjzYYxSnjzQ68LqvpIx5er7u</string>

    <!-- add account -->
    <string name="add_account_title">Add Account</string>
    <string name="nickname">Nickname</string>
    <string name="password">Ironically Type Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_account">Add Account</string>
    <string name="checkboxTxt">I don\'t have an Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="delete_backup">Delete Backup</string>
    <string name="add_backup_questions">Add Backup Questions</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="delete">Do you really want to Delete your Backup?\nThis step is irreversible and I will not be able to provide any assistance</string>
    <string name="delete_2">Do you really want to Delete your Account?\nThis step is irreversible and I will not be able to provide any assistance\n</string>

    <!-- security question-->
    <string name="security_questions_title">Backup Questions</string>
    <string name="security_question_subtitle">Fill out the Questions Below\n\nThis will come in handy if you forget Password Bro\'s password</string>
    <string name="security_question_subtitle_2">Answer these questions to make sure its really you</string>
    <string name="question_1">Your Mother\'s Father\'s name</string>
    <string name="question_2">Your Hobby</string>
    <string name="question_3">Your First pet name</string>
    <string name="question_4">Your Guilty Pleasure</string>
    <string name="question_5">Place you call Home</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="continueBtn">continue</string>
    <string name="check">check</string>
    <string name="email">Email e.g. example@example.com</string>
    <string name="backup_now">backup now</string>
    <string name="add_record">Add Record</string>
    <string name="hint_3">email/username</string>
    <string name="text_img">text img</string>
    <string name="show_password">show password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
