<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/length_header">

        <EditTextPreference
            app:key="easy_length"
            app:title="@string/easy_length"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:defaultValue="8"/>

        <EditTextPreference
            app:key="med_length"
            app:title="@string/mod_length"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:defaultValue="12"/>

        <EditTextPreference
            app:key="hard_length"
            app:title="@string/hard_length"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:defaultValue="16"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_header">

        <SwitchPreferenceCompat
            app:key="fingerprint"
            app:title="@string/fingerprint"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup">

        <SwitchPreferenceCompat
            app:key="backup"
            app:title="@string/backup_string"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
