<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.virusX.passwordBro.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_share"
        android:name="com.virusX.passwordBro.ShareActivity"
        android:label="@string/menu_share"
        tools:layout="@layout/activity_share" />
    <activity
        android:id="@+id/nav_privacy"
        android:name="com.virusX.passwordBro.PrivacyActivity"
        android:label="@string/menu_privacy"
        tools:layout="@layout/activity_privacy" />
</navigation>