<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    tools:context=".QnActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="qnTapped">

        <TextView
            android:id="@+id/security_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/security_questions_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/security_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security_title" />

        <EditText
            android:id="@+id/q1Edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/question_1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security_subtitle" />

        <EditText
            android:id="@+id/q2Edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/question_2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1Edt" />

        <EditText
            android:id="@+id/q3Edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/question_3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2Edt" />

        <EditText
            android:id="@+id/q4Edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/question_4"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3Edt" />

        <EditText
            android:id="@+id/q5Edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/question_5"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q4Edt" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q5Edt">

            <RadioButton
                android:id="@+id/ice_cream_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#009688"
                android:text="@string/ice_cream"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/chocolate_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#009688"
                android:text="@string/chocolate"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/qnBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="#FF5E6C"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:theme="@style/progressBarTheme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>